# kenobi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  dark_side.cpp  dark_side.h  main.cpp
hello_there/: CMakeLists.txt  library.c  library.cpp
inject/: CMakeLists.txt  inject.c  inject.h  ptrace.c  ptrace.h  utils.c  utils.h
modules/: enable_warnings.cmake
